openShiftConfigs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-spring-hello-world
  namespace: default
spec:
  selector:
    deploymentconfig: spring-hello-world
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
