openShiftConfigs/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-service-spring-hello-world
spec:
  to:
    kind: Service
    name: service-spring-hello-world
